borsh-derive/src/internals/attributes/snapshots/borsh_derive__internals__attributes__field__tests__schema_with_funcs_parsing.snap
---
source: borsh-derive/src/internals/attributes/field.rs
expression: debug_print_tokenizable(with_funcs.declaration)
---
third_party_impl :: declaration :: < K , V >

