borsh-derive/src/internals/attributes/snapshots/borsh_derive__internals__attributes__field__tests__ser_de_with_parsing1.snap
---
source: borsh-derive/src/internals/attributes/field.rs
expression: debug_print_tokenizable(attrs.serialize_with)
---
third_party_impl :: serialize_third_party

